infra/k8s/eks/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonsai-ingress
  namespace: bonsai
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health/
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    # CORS settings for all requests
    alb.ingress.kubernetes.io/cors-allow-headers: "DNT,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    alb.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, PUT, DELETE"
    alb.ingress.kubernetes.io/cors-allow-origin: "*"
    # Media files caching and handling
    alb.ingress.kubernetes.io/actions.options-method: >
      {
        "Type": "fixed-response",
        "FixedResponseConfig": {
          "ContentType": "text/plain",
          "StatusCode": "204",
          "MessageBody": ""
        }
      }
spec:
  rules:
    - http:
        paths:
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: bonsai-backend
                port:
                  number: 8000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: bonsai-backend
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bonsai-backend
                port:
                  number: 8000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: bonsai-backend
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: bonsai-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bonsai-frontend
                port:
                  number: 80
